--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -15,16 +15,17 @@
 <?import javafx.scene.text.Font?>
 
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.MenuItem?>
 <BorderPane fx:id="mainPanel" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="sample.Controller">
     <top>
         <MenuBar>
             <menus>
                 <Menu text="Employee">
                     <!--<items>-->
-                        <!--<MenuItem text="Add..." onAction="#showAddContactDialog"/>-->
+                        <!--<MenuItem text="Add" onAction="#showAddContactDialog"/>-->
                     <!--</items>-->
                     <!--<items>-->
-                        <!--<MenuItem text="Edit..." onAction="#showEditContactDialog"/>-->
+                        <!--<MenuItem text="Edit" onAction="#showEditContactDialog"/>-->
                     <!--</items>-->
                     <!--<items>-->
                         <!--<MenuItem text="Delete" onAction="#deleteContact"/>-->
@@ -35,6 +36,33 @@
     </top>
 
     <left>
+        <!--<TableView fx:id="salesTable">-->
+            <!--<columnResizePolicy>-->
+                <!--<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />-->
+            <!--</columnResizePolicy>-->
+            <!--<columns>-->
+                <!--<TableColumn maxWidth="70" minWidth="70" text="Date">-->
+                    <!--<cellValueFactory>-->
+                        <!--<PropertyValueFactory property="date" />-->
+                    <!--</cellValueFactory>-->
+                <!--</TableColumn>-->
+                <!--<TableColumn text="Description">-->
+                    <!--<cellValueFactory>-->
+                        <!--<PropertyValueFactory property="description" />-->
+                    <!--</cellValueFactory>-->
+                <!--</TableColumn>-->
+                <!--<TableColumn text="Details">-->
+                    <!--<cellValueFactory>-->
+                        <!--<PropertyValueFactory property="details" />-->
+                    <!--</cellValueFactory>-->
+                <!--</TableColumn>-->
+                <!--<TableColumn text="EmployeeId">-->
+                    <!--<cellValueFactory>-->
+                        <!--<PropertyValueFactory property="employeeId" />-->
+                    <!--</cellValueFactory>-->
+                <!--</TableColumn>-->
+            <!--</columns>-->
+        <!--</TableView>-->
         <TableView fx:id="employeeTable">
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -52,9 +80,6 @@
                 </TableColumn>
             </columns>
         </TableView>
-        <!--<TableView fx:id="salesTable" visible="false">-->
-
-        <!--</TableView>-->
     </left>
     <center>
         <VBox style="-fx-background-color: white">
@@ -90,7 +115,6 @@
                 <Button onAction="#listSalesForEmployees" maxWidth="Infinity" mnemonicParsing="false" text="Show Sales of employee" />
                 <Button maxWidth="Infinity" mnemonicParsing="false" text="Update selected employee" />
                 <Button maxWidth="Infinity" mnemonicParsing="false" text="Update selected sale" />
-
             </children>
             <BorderPane.margin>
                 <Insets left="10.0" right="10.0"/>
