--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -36,46 +36,14 @@
     </top>
 
     <left>
-        <!--<TableView fx:id="salesTable">-->
-            <!--<columnResizePolicy>-->
-                <!--<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />-->
-            <!--</columnResizePolicy>-->
-            <!--<columns>-->
-                <!--<TableColumn maxWidth="70" minWidth="70" text="Date">-->
-                    <!--<cellValueFactory>-->
-                        <!--<PropertyValueFactory property="date" />-->
-                    <!--</cellValueFactory>-->
-                <!--</TableColumn>-->
-                <!--<TableColumn text="Description">-->
-                    <!--<cellValueFactory>-->
-                        <!--<PropertyValueFactory property="description" />-->
-                    <!--</cellValueFactory>-->
-                <!--</TableColumn>-->
-                <!--<TableColumn text="Details">-->
-                    <!--<cellValueFactory>-->
-                        <!--<PropertyValueFactory property="details" />-->
-                    <!--</cellValueFactory>-->
-                <!--</TableColumn>-->
-                <!--<TableColumn text="EmployeeId">-->
-                    <!--<cellValueFactory>-->
-                        <!--<PropertyValueFactory property="employeeId" />-->
-                    <!--</cellValueFactory>-->
-                <!--</TableColumn>-->
-            <!--</columns>-->
-        <!--</TableView>-->
         <TableView fx:id="employeeTable">
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
             <columns>
-                <TableColumn maxWidth="70" minWidth="70" text="Id">
+                <TableColumn text="name">
                     <cellValueFactory>
-                        <PropertyValueFactory property="id" />
-                    </cellValueFactory>
-                </TableColumn>
-                <TableColumn text="Employee Name">
-                    <cellValueFactory>
-                        <PropertyValueFactory property="name" />
+                        <PropertyValueFactory property="name"/>
                     </cellValueFactory>
                 </TableColumn>
             </columns>
