--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -2,9 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
@@ -12,11 +14,8 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.MenuItem?>
-<BorderPane fx:id="mainPanel" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="sample.Controller">
+<BorderPane fx:id="mainPanel" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <top>
         <MenuBar>
             <menus>
@@ -36,39 +35,69 @@
     </top>
 
     <left>
-        <TableView fx:id="employeeTable">
-            <columnResizePolicy>
-                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-            </columnResizePolicy>
-            <columns>
-                <TableColumn text="name">
-                    <cellValueFactory>
-                        <PropertyValueFactory property="name"/>
-                    </cellValueFactory>
-                </TableColumn>
-            </columns>
-        </TableView>
+        <VBox >
+            <children>
+                <TableView fx:id="employeeTable">
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                    <columns>
+                        <TableColumn maxWidth="70" minWidth="70" text="ID">
+                            <cellValueFactory>
+                                <PropertyValueFactory property="id" />
+                            </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn text="Employee name">
+                            <cellValueFactory>
+                                <PropertyValueFactory property="name" />
+                            </cellValueFactory>
+                        </TableColumn>
+                    </columns>
+                </TableView>
+                <VBox >
+                    <children>
+                        <TableView fx:id="salesTable">
+                            <columnResizePolicy>
+                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                            </columnResizePolicy>
+                            <columns>
+                                <TableColumn maxWidth="70" minWidth="70" text="Date">
+                                    <cellValueFactory>
+                                        <PropertyValueFactory property="date" />
+                                    </cellValueFactory>
+                                </TableColumn>
+                                <TableColumn text="Description">
+                                    <cellValueFactory>
+                                        <PropertyValueFactory property="description" />
+                                    </cellValueFactory>
+                                </TableColumn>
+                            </columns>
+                        </TableView>
+                    </children>
+                </VBox>
+            </children>
+        </VBox>
     </left>
     <center>
         <VBox style="-fx-background-color: white">
             <TextArea fx:id="itemDetailsTextArea" VBox.vgrow="ALWAYS" />
             <HBox>
-                <Label style="-fx-background-color: white" visible="false" text="Date achieved: ">
+                <Label style="-fx-background-color: white" text="Date achieved: " visible="false">
                     <font>
-                        <Font name="Times New Roman bold" size="20" />
+                        <!--<Font description="Times New Roman bold" size="20" />-->
                     </font>
                 </Label>
                 <Label fx:id="deadlineLabel" style="-fx-background-color: white">
                     <font>
-                        <Font name="Times New Roman bold" size="20" />
+                        <!--<Font description="Times New Roman bold" size="20" />-->
                     </font>
                 </Label>
             </HBox>
             <HBox>
                 <children>
-                    <ProgressBar fx:id="progressBar" visible="false" prefWidth="300.0" progress="0.0">
+                    <ProgressBar fx:id="progressBar" prefWidth="300.0" progress="0.0" visible="false">
                         <HBox.margin>
-                            <Insets left="35.0"/>
+                            <Insets left="35.0" />
                         </HBox.margin>
                     </ProgressBar>
                 </children>
@@ -78,14 +107,12 @@
     <right>
         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="170.00" spacing="20.0" BorderPane.alignment="CENTER">
             <children>
-                <Button onAction="#listEmployees" maxWidth="Infinity" mnemonicParsing="false" text="List Employees" />
+                <!--<Button maxWidth="Infinity" mnemonicParsing="false" onAction="#listEmployees" text="List Employees" />-->
                 <Button maxWidth="Infinity" mnemonicParsing="false" text="Add sale to employee" />
-                <Button onAction="#listSalesForEmployees" maxWidth="Infinity" mnemonicParsing="false" text="Show Sales of employee" />
-                <Button maxWidth="Infinity" mnemonicParsing="false" text="Update selected employee" />
-                <Button maxWidth="Infinity" mnemonicParsing="false" text="Update selected sale" />
+                <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#listSalesForEmployees" text="Show Sales of employee" />
             </children>
             <BorderPane.margin>
-                <Insets left="10.0" right="10.0"/>
+                <Insets left="10.0" right="10.0" />
             </BorderPane.margin>
         </VBox>
     </right>
