--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -15,14 +15,15 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="mainPanel" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<?import javafx.scene.control.MenuItem?>
+<BorderPane fx:id="mainBorderPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <top>
         <MenuBar>
             <menus>
                 <Menu text="Employee">
-                    <!--<items>-->
-                        <!--<MenuItem text="Add" onAction="#showAddContactDialog"/>-->
-                    <!--</items>-->
+                    <items>
+                        <MenuItem fx:id="menuAdd" text="Add" mnemonicParsing="true" onAction="#showAddEmployeeDialog"/>
+                    </items>
                     <!--<items>-->
                         <!--<MenuItem text="Edit" onAction="#showEditContactDialog"/>-->
                     <!--</items>-->
@@ -110,7 +111,7 @@
     <right>
         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="170.00" spacing="20.0" BorderPane.alignment="CENTER">
             <children>
-                <!--<Button maxWidth="Infinity" mnemonicParsing="false" onAction="#listEmployees" text="List Employees" />-->
+                <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#refreshTable" text="Refresh Employee table" />
                 <Button maxWidth="Infinity" mnemonicParsing="false" text="Add sale to employee" />
                 <!--<Button maxWidth="Infinity" mnemonicParsing="false" onAction="#listSalesForEmployees" text="Show Sales of employee" />-->
             </children>
