--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -38,7 +38,7 @@
     <left>
         <VBox >
             <children>
-                <TableView fx:id="employeeTable">
+                <TableView maxWidth="230" minWidth="230" VBox.vgrow="ALWAYS" fx:id="employeeTable">
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                     </columnResizePolicy>
@@ -55,34 +55,43 @@
                         </TableColumn>
                     </columns>
                 </TableView>
-                <VBox >
-                    <children>
-                        <TableView fx:id="salesTable">
-                            <placeholder>
-                                <Label text="No Employee selected."/>
-                            </placeholder>
-                            <columnResizePolicy>
-                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                            </columnResizePolicy>
-                            <columns>
-                                <TableColumn maxWidth="70" minWidth="70" text="Date">
-                                    <cellValueFactory>
-                                        <PropertyValueFactory property="date" />
-                                    </cellValueFactory>
-                                </TableColumn>
-                                <TableColumn text="Description">
-                                    <cellValueFactory>
-                                        <PropertyValueFactory property="description" />
-                                    </cellValueFactory>
-                                </TableColumn>
-                            </columns>
-                        </TableView>
-                    </children>
-                </VBox>
+
             </children>
         </VBox>
     </left>
     <center>
+        <VBox >
+            <children>
+                <TableView fx:id="salesTable" maxWidth="230" minWidth="230" VBox.vgrow="ALWAYS">
+                    <placeholder>
+                        <Label text="No Employee selected or no sales to show."/>
+                    </placeholder>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                    <columns>
+                        <TableColumn maxWidth="70" minWidth="70" text="Date">
+                            <cellValueFactory>
+                                <PropertyValueFactory property="date" />
+                            </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn text="Description">
+                            <cellValueFactory>
+                                <PropertyValueFactory property="description" />
+                            </cellValueFactory>
+                        </TableColumn>
+                    </columns>
+                </TableView>
+            </children>
+            <HBox>
+                <children>
+                    <Button maxWidth="Infinity" mnemonicParsing="false"  text="Add sale" />
+                    <Button maxWidth="Infinity" mnemonicParsing="false" text="Delete sale" alignment="TOP_RIGHT" />
+                </children>
+            </HBox>
+        </VBox>
+    </center>
+    <right>
         <VBox style="-fx-background-color: white">
             <TextArea fx:id="itemDetailsTextArea" VBox.vgrow="ALWAYS" />
             <HBox>
@@ -107,18 +116,16 @@
                 </children>
             </HBox>
         </VBox>
-    </center>
-    <right>
-        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="170.00" spacing="20.0" BorderPane.alignment="CENTER">
-            <children>
+        <!--<VBox alignment="CENTER" prefHeight="200.0" prefWidth="170.00" spacing="20.0" BorderPane.alignment="CENTER">-->
+            <!--<children>-->
                 <!--<Button maxWidth="Infinity" mnemonicParsing="false" onAction="#refreshTable" text="Refresh Employee table" />-->
-                <Button maxWidth="Infinity" mnemonicParsing="false" text="Add sale to employee" />
+                <!--<Button maxWidth="Infinity" mnemonicParsing="false" text="Add sale to employee" />-->
                 <!--<Button maxWidth="Infinity" mnemonicParsing="false" onAction="#listSalesForEmployees" text="Show Sales of employee" />-->
-            </children>
-            <BorderPane.margin>
-                <Insets left="10.0" right="10.0" />
-            </BorderPane.margin>
-        </VBox>
+            <!--</children>-->
+            <!--<BorderPane.margin>-->
+                <!--<Insets left="10.0" right="10.0" />-->
+            <!--</BorderPane.margin>-->
+        <!--</VBox>-->
     </right>
 
 </BorderPane>
