--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -17,6 +16,7 @@
 
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.TextField?>
 <BorderPane fx:id="mainBorderPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <top>
         <MenuBar>
@@ -39,7 +39,9 @@
     <left>
         <VBox >
             <children>
-                <Label text="Employee Table"/>
+                <HBox>
+                    <Label text="  Employee Table: "/>
+                </HBox>
                 <TableView fx:id="employeeTable" maxWidth="230" minWidth="230" VBox.vgrow="ALWAYS">
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -70,8 +72,9 @@
     <center>
         <VBox >
             <children>
-                <Label text="Sales Table"/>
-                <TableView fx:id="salesTable" maxWidth="230" minWidth="230" VBox.vgrow="ALWAYS">
+                <HBox>
+                    <Label text="  Sales Table: "/>
+                </HBox>                <TableView fx:id="salesTable" maxWidth="230" minWidth="230" VBox.vgrow="ALWAYS">
                     <placeholder>
                         <Label text="No Employee selected or no sales to show"/>
                     </placeholder>
@@ -104,9 +107,14 @@
     <right>
         <VBox>
             <HBox>
-                <Label text="test" VBox.vgrow="ALWAYS"/>
+                <Label text=" Employee Information" VBox.vgrow="ALWAYS"/>
             </HBox>
+            <Label text=" Employee Name"/>
+            <TextField fx:id="empNameTextField" maxWidth="140"/>
             <TextArea fx:id="itemDetailsTextArea" VBox.vgrow="ALWAYS" />
+            <HBox>
+                <Label text=" Sales Information" VBox.vgrow="ALWAYS"/>
+            </HBox>
             <TextArea fx:id="itemDetailsTextArea1" VBox.vgrow="ALWAYS" />
             <HBox prefHeight="45">
                 <children>
